unpackaged/main/default/objects/ffirule__ClickLinkManagedJob__c/ffirule__ClickLinkManagedJob__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffirule__helpclicklinkmanagedjob</customHelpPage>
    <label>ClickLink Managed Job</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ClickLink Managed Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Managed Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>