unpackaged/main/default/objects/ffirule__ClickLinkManagedJob__c/fields/ffirule__ApexJobID__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ApexJobID__c</fullName>
    <label>Apex Job ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>