unpackaged/main/default/objects/ffirule__ClickLinkManagedJob__c/fields/ffirule__ClickLinkJob__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ClickLinkJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClickLink Job</label>
    <referenceTo>ffirule__IntegrationRuleJob__c</referenceTo>
    <relationshipLabel>ClickLink Managed Jobs</relationshipLabel>
    <relationshipName>IntegrationRuleJobs</relationshipName>
    <type>Lookup</type>
</CustomField>